add base functional
